<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_changer_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimention_52dp"
        android:fontFamily="@font/time_new_roman"
        android:text="@string/title_doi_mat_khau"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/dimention_25sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_changer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimention_10dp"
        android:layout_marginStart="@dimen/dimention_56dp"
        android:layout_marginTop="@dimen/dimention_32dp"
        android:layout_marginEnd="@dimen/dimention_56dp"
        android:layout_marginBottom="@dimen/dimention_56dp"
        android:background="@drawable/border_yes"
        android:text="@string/title_doi_mat_khau"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_again_password" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimention_56dp"
        android:layout_marginTop="@dimen/dimention_56dp"
        android:layout_marginEnd="@dimen/dimention_56dp"
        android:ems="10"
        android:hint="@string/title_moi_user"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_changer_password" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimention_56dp"
        android:ems="10"
        android:hint="@string/title_mat_khau_cu"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_username" />

    <EditText
        android:id="@+id/edt_again_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimention_56dp"
        android:ems="10"
        android:hint="@string/title_mat_khau_moi"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_no"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/btn_changer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_changer"
        app:layout_constraintTop_toTopOf="@+id/btn_changer" />
</androidx.constraintlayout.widget.ConstraintLayout>